* Add Windows 8/8.1 ability to image with resizable. BCD works with them too.
* Add SnapinJob to Host class.
* Add libtorrent and rtorrent to inits.
* Add beginning stages to allow split file images.
* Add hostname to kernel args as default.  Use hostearly variable sent if
HOSTNAME_EARLY is enabled and check against this to change hostname.
* Update plugin hooks with system to check if they are enabled or not to
display their relevant menu/submenu items or other actions.
* Update ipxe/undionly tftp files to latest available.
* Update pigz operations to their own function in init.xz files and in
/usr/share/fog/lib/funcs.sh
* Remove IMAGE_TRUST_CMD from ipxe/undionly to hopefully remove console
issues.
* Remove htmldoc/clamav from fedora/centos installer.  Reinserted after adding
Mageia support.
* Remove hooking from Mobile pages as it's already a limited section.
* Schema update to remove ssh client setting stuff and move FOG_SNAPINDIR to
FOG Snapin - Service category.
* Refine session closing/opening/regenerating data on GUI side.
* Refine service files particularly for snapins.
* Redirect users to index.php if they attempt to go to a node that doesn't
have a relevant class to work with.

Version 1.1.2
-------------

* Fix client updater so hash is returned properly.
* Fix client updater so files are downloaded properly.
* Fix installer functions so they upgrade/install properly.
* Fix bug in imageid setting for full host registration.
* Fix installer issues from moving commons/config.php to
* Fix Storage Node/Image Replicator so it only replicates to enabled nodes.
lib/fog/Config.class.php
* Fix issue where invalid mac would still create Host with 0 ID in DB.
* Fix scheduled tasks so styles of 4,5,6 will work properly.
* Fix Group Host add so they are in their own forms.
* Fix BUG where redirect was in use to form element and having bad side
effects.
* Tweak/fix Mainmenu links so the calls can set multiple menu items.