@@ -29,7 +29,7 @@ if [ -f "/images/.mntcheck" ]; then
 	# based on default normal values.
 	# Otherwise it uses MBR/GPT to generate the partition table(s).
 	if [ "$imgType" == "n" ]; then
-		if [ "$osid" != "1" ] && [ "$osid" != "2" ] && [ "$osid" != "5" ] && [ "$osid" != "6" ] && [ "$osid" != "7" ]; then
+		if [ "$osid" != "1" ] && [ "$osid" != "2" ] && [ "$osid" != "5" ] && [ "$osid" != "6" ] && [ "$osid" != "7" ] && [ "$osid" != "50" ]; then
 			handleError " * Invalid Operating System ID: $osname ($osid)!";
 		fi
 		enableWriteCache $hd
@@ -131,6 +131,48 @@ EOFPT
 			parted -s $hd u kB mkpart primary ntfs $defaultpart2start $layPartSize &>/dev/null;
 			echo "Done";
 			correctVistaMBR $hd;
+		elif [ "$osid" == "50" ]; then
+			dots "Erasing current MBR/GPT Tables";
+			sgdisk -Z $hd >/dev/null;
+			runPartprobe;
+			echo "Done";
+			tmpMBR="$imagePath/d1.mbr";
+			has_GRUB=`hasGRUB "${hd}" "1" "${imagePath}"`;
+			mbrsize=`ls -l $tmpMBR | awk '{print $5}'`;
+			if [ -f $tmpMBR ]; then
+				if [ "$mbrsize" != "32256" -a "$has_GRUB" != "1" ] && [ "$mbrsize" != "512" ]; then
+					dots "Restoring Partition Tables";
+					sgdisk -gel $tmpMBR $hd 2>&1 >/dev/null;
+					gptcheck="yes";
+				elif [ "$mbrsize" == "32256" -o "$has_GRUB" == "1" ] && [ "$osid" == "50" ]; then
+					dots "Restoring MBR and GRUB";
+					restoreGRUB "${hd}" "1" "${imagePath}";
+					if [ -e "${imagePath}/d1.partitions" ]; then
+						echo "Done";
+						dots "Extended partitions";
+						sfdisk $hd < ${imagePath}/d1.partitions &>/dev/null;
+					else
+						echo "Done";
+						dots "No extended partitions";
+					fi
+				else
+					dots "Restoring MBR";
+					dd if=$tmpMBR of=$hd bs=512 count=1 &>/dev/null;
+					if [ -e "${imagePath}/d1.partitions" ]; then
+						echo "Done";
+						dots "Extended partitions";
+						sfdisk $hd < ${imagePath}/d1.partitions &>/dev/null;
+					else
+						echo "Done";
+						dots "No extended partitions";
+					fi
+				fi
+				runPartprobe $hd;
+				echo "Done";
+				sleep 3;
+			else
+				handleError "Image Store Corrupt: Unable to locate MBR.";
+			fi
 		fi
 	elif [ "$imgType" == "mps" ]; then
 		if [ -d "$imagePath" ]; then
@@ -253,6 +295,18 @@ EOFPT
 					writeImageMultiCast $win7sys
 				fi
 				expandPartition $win7sys
+			elif [ "$osid" == "50" ]; then
+				parts=`fogpartinfo --list-parts $hd 2>/dev/null`;
+				diskLength=`expr length $hd`;
+				for part in $parts; do
+					partNum=${part:$diskLength};
+					echo " * Processing Partition: $part ($partNum)";
+					writeImageMultiCast $part
+					fstype=`blkid -po udev $part | grep FS_TYPE | awk -F'=' '{print $2}'`;
+					if [ "$fstype" == "ext4" ] || [ "$fstype" == "ext3" ] || [ "$fstype" == "ext2" ]; then
+						expandPartition $part;
+					fi
+				done
 			else
 				writeImageMultiCast $part
 				expandPartition $part
@@ -302,8 +356,25 @@ EOFPT
 					writeImage "$imagePath/rec3.img.*" ${hd}2
 					writeImage "$imagePath/sys.img.*" $win7sys
 				fi
-				
 				expandPartition $win7sys
+			elif [ "$osid" == "50" ]; then
+				parts=`fogpartinfo --list-parts $hd 2>/dev/null`;
+				diskLength=`expr length $hd`;
+				for part in $parts; do
+					partNum=${part:$diskLength};
+					echo " * Processing Partition: $part ($partNum)";
+					imgpart="$imagePath/d1p${partNum}.img*";
+					sleep 2;
+					if [ ! -f $imgpart ]; then
+						echo " * Partition File Missing: $imgpart";
+					else
+						writeImage "$imgpart" $part
+					fi
+					fstype=`blkid -po udev $part | grep FS_TYPE | awk -F'=' '{print $2}'`;
+					if [ "$fstype" == "ext4" ] || [ "$fstype" == "ext3" ] || [ "$fstype" == "ext2" ]; then
+						expandPartition $part;
+					fi
+				done
 			else
 				writeImage $imagePath $part
 				expandPartition $part
